Spring Cloud 系列之 Consul 服务注册中心案例源码

--- a/consul-demo/service-consumer/src/main/resources/application.yml
+++ b/consul-demo/service-consumer/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   cloud:
     consul:
       # 注册中心的访问地址
-      host: 192.168.31.103
+      host: localhost
       port: 8500
       # 服务提供者信息
       discovery:
