Spring Cloud 系列之 Apollo 配置中心案例源码

--- a/apollo-demo/order-service02/pom.xml
+++ b/apollo-demo/order-service02/pom.xml
@@ -58,6 +58,11 @@
                     <target>9</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
