--- a/apollo-demo/order-service/src/main/resources/application.yml
+++ b/apollo-demo/order-service/src/main/resources/application.yml
@@ -10,8 +10,9 @@ app:
   id: order-service # 与 Apollo 配置中心中的 AppId 一致
 
 apollo:
-  meta: http://localhost:8080 # Apollo 中的 Eureka 注册中心地址
-  #cluster:  # 指定 Apollo 集群，相同集群实例使用对应集群的配置
+  meta: http://localhost:8080
+  #meta: http://192.168.10.102:8080,http://192.168.10.104:8080 # Apollo 中的 Eureka 注册中心地址
+  #cluster: SHAOY # 指定 Apollo 集群，默认为 default，相同集群实例使用对应集群的配置
   #cacheDir:  # 配置缓存目录，网络不可用时任然可提供配置服务
   bootstrap:
     enable: true # 启用 apollo
